--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/core": "7.12.13",
     "@babel/preset-env": "7.12.13",
     "@babel/preset-react": "7.12.13",
+    "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "12.8.1",
     "axios": "0.21.1",
     "axios-mock-adapter": "1.19.0",
     "babel-loader": "8.2.2",
